--- a/style.css
+++ b/style.css
@@ -54,19 +54,16 @@
 }
 
 .login-button {
-    display: flex;  
-    align-items: center;
-    justify-content: center;
-    width: 640px;
-    height: 56px;
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 32px;
-    color: var(--gray50);
+    width: 128px;
+    height: 48px;
     border: 1px solid transparent;
-    border-radius: 40px;
-    padding: 16px 124px;
-    background-color: var(--gray400);
+    border-radius: 8px;
+    padding: 12px 20px;
+    text-decoration: none;
+    background-color: var(--color);
+    color: white;
+    cursor: pointer;
+    text-align: center;
 }
 
 .top-banner-button {
